[package]
name = "iterative-stability"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]

parallel = ["rayon"]

[dependencies]
num-complex = "0.3.1"
rayon = { version = "1.5.0", optional = true }
palette = "0.5.0"

[dev-dependencies]
bmp = "0.5.0"
minifb = "0.19.2"