[package]
name = "iterative-stability"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]

parallel = ["rayon"]

[dependencies]
glam = "0.22.0"
num-complex = "0.3.1"
num-traits = "0.2.14"
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
bmp = "0.5.0"
minifb = "0.19.2"
palette = "0.5"
humantime = "2.1.0"

[profile.release]
codegen-units = 1
lto = true
