[package]
name = "iterative-stability"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]

parallel = ["rayon"]

[dependencies]
num-complex = "0.3.1"
num-traits = "0.2.14"
rayon = { version = "1.5.0", optional = true }
pollster = "0.2.5"
bytemuck = "1.12.3"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
glam = { version = "0.22.0", features = ["bytemuck"] }
wgpu = "0.14.2"
parking_lot = "0.12.1"

[dev-dependencies]
bmp = "0.5.0"
minifb = "0.19.2"
palette = "0.5"
humantime = "2.1.0"
